[package]
name = "mdbtools"
version = "0.1.0"
authors = ["Steven Yang <steven@avd.com.au>"]
build = "build.rs"
[build-dependencies]
gcc = "0.3.19"
pkg-config = "0.3.6"
[dependencies]
libc = "0.2.2"
glib = "0.0.5"
gobject-sys = "0.2.1"
pkg-config = "0.3.6"
glib-sys = "0.2.1"
gio-sys = "0.2.1"
log = "0.3.3"
 